--- a/pages/videoVote/videoVoteSignup/videoVoteSignup.wxss
+++ b/pages/videoVote/videoVoteSignup/videoVoteSignup.wxss
@@ -154,6 +154,7 @@ view.voteInfoStatusChild:nth-child(3){
     height:410rpx;
     background:#fff;
     position:relative;
+    padding-bottom:15rpx;
 }
 .activeInfoInfoTitle{
     width:170rpx;
@@ -190,6 +191,17 @@ view.voteInfoStatusChild:nth-child(3){
 }
 .activeInfoInfoTime view:nth-child(2){
     text-align:center;
+    color:#7b7b7b;
+    font-size:26rpx;
+
+}
+.activeInfoInfoTime>view:nth-child(2)>text{
+    width:620rpx;
+    line-height:30rpx;
+    margin-left:60rpx;
+    margin-top:20rpx;
+    display:block;
+    text-align:left !important;
 }
 .empty{
     width:100%;
@@ -234,10 +246,11 @@ view.voteInfoStatusChild:nth-child(3){
 }
 .activeInfoImagesText{
     width:680rpx;
-    min-height:60rpx;
-    line-height:60rpx;
+    min-height:35rpx;
+    line-height:35rpx;
     font-size:28rpx;
     margin:0rpx auto;
+    padding-bottom:15rpx;
 }
 .activeInfoImage{
     width:680rpx;
