--- a/pages/baseOptions/schoolInfo/schoolInfo.wxml
+++ b/pages/baseOptions/schoolInfo/schoolInfo.wxml
@@ -1,6 +1,6 @@
 <import src='../template/swiper.wxml' />
 <swiper width="100%" indicator-dots="true" indicator-color="{{indicatorColor}}" autoplay="{{autoplay}}" duration="{{duration}}" interval="{{interval}}" indicator-active-color="indicatorActiveColor">
-    <block wx:for="{{pageData.environment}}">
+    <block wx:for="{{pageData.environment}}" wx:key='{{item.id}}'>
         <swiper-item>
             <image src="{{item.url}}" class="slide-image" mode='widthFix' />
         </swiper-item>
@@ -10,6 +10,6 @@
 <view class='schoolVideo' hidden='{{isVideo}}'>
     <video src='{{pageData.brand.url}}'></video>
 </view>
-<view class='honorImage' wx:for='{{pageData.honor}}'>
+<view class='honorImage' wx:for='{{pageData.honor}}' wx:key='{{item.id}}' data-url='{{item.url}}' bindtap='previewImages'>
     <image src='{{item.url}}' mode='widthFix'></image>
 </view>
