--- a/pages/courses/courseInfo/courseInfo.wxss
+++ b/pages/courses/courseInfo/courseInfo.wxss
@@ -1,6 +1,9 @@
 /* pages/courseInfo/courseInfo.wxss */
 @import '../../../utils/iconFont.wxss';
-
+page{
+    background: #f0efed;
+    padding-bottom:100rpx;
+}
 .courseInfoWrap {
     width: 750rpx;
     min-height: 1207rpx;
@@ -10,7 +13,7 @@
 
 .courseInfoTop {
     width: 750rpx;
-    height: 400rpx;
+    min-height: 400rpx;
     background: #fff;
 }
 
@@ -27,9 +30,12 @@
 
 .courseInfoTop text {
     display: block;
-    line-height: 70rpx;
-    width: 100%;
-    text-indent: 20rpx;
+    min-height:40rpx;
+    line-height: 40rpx;
+    width: 700rpx;
+    font-size:32rpx;
+    margin:0rpx auto;
+    text-align:center;
 }
 
 
@@ -105,7 +111,6 @@
 .courseInfoDescirbText{
     width:710rpx;
     margin:0 auto;
-    text-indent:20rpx;
 }
 
 .courseInfoToIndex {
@@ -120,44 +125,44 @@
 
 .courseInfoInfo {
     width: 750rpx;
-    height: 70rpx;
+    min-height: 70rpx;
     background: #fff;
 }
 
 .courseInfoInfo .courseInfoInfoLeft {
-    float: left;
     color: #717171;
     margin-left: 20rpx;
 }
 
 .courseInfoInfo .courseInfoInfoLeft text:nth-child(1) {
-    line-height: 70rpx;
+    line-height: 50rpx;
     font-size: 40rpx;
 }
 .courseInfoInfo .courseInfoInfoLeft text:nth-child(2) {
-    line-height: 70rpx;
-    font-size: 30rpx;
+    line-height: 50rpx;
+    font-size: 26rpx;
 }
 
 .courseInfoInfo .courseInfoInfoRight {
-    float: right;
     color: #717171;
-    margin-right: 20rpx;
+    margin-left: 20rpx;
 }
 
-.courseInfoInfo .courseInfoInfoRight text {
-    font-size: 60rpx;
-    line-height: 70rpx;
-    border-left: 0.5px solid rgba(192, 192, 192, 0.5);
+.courseInfoInfo .courseInfoInfoRight text:nth-child(1) {
+    line-height: 50rpx;
+    font-size: 40rpx;
+}
+.courseInfoInfo .courseInfoInfoRight text:nth-child(2){
+    line-height: 50rpx;
+    font-size: 26rpx;
 }
 .courseInfoImage{
     width:750rpx;
-    height:400rpx;
     background:#fff;
+    min-height:1rpx;
 }
-.courseInfoImage image{
+.courseInfoImage>image{
     width:750rpx;
-    height:400rpx;
 }
 .empty{
     width:750rpx;
@@ -332,7 +337,7 @@ button[class='courseInfoBottomShare']::after {
     margin:0 auto;
 }
 .infoContentText text{
-    font-size:30rpx;
+    font-size:26rpx;
     color:#7b7b7b;
     line-height:40rpx;
 }
