--- a/pages/videoVote/videoVoteSignup/videoVoteSignup.wxml
+++ b/pages/videoVote/videoVoteSignup/videoVoteSignup.wxml
@@ -70,6 +70,10 @@
             <view>投票时间:</view>
             <view>{{pageData.vote_start_time}} 至 {{pageData.vote_end_time}}</view>
         </view>
+        <view class='activeInfoInfoTime'>
+            <view>活动介绍:</view>
+            <view><text>{{pageData.description}}</text></view>
+        </view>
         <button>了解机构 ></button>
     </view>
     <!-- 活动分享 -->
@@ -82,19 +86,19 @@
     <view class='activeInfoImages' hidden='{{isTitleOne}}'>
         <view class='activeInfoInfoTitle'>{{pageData.title1}}</view>
         <view class='emptyImage'></view>
-        <view class='activeInfoImage' wx:for='{{pageData.act_image1}}'><image src='{{item.url}}' mode='widthFix'></image></view>
-        <view class='activeInfoImagesText'>{{pageData.content1}}</view>
+        <view class='activeInfoImage' wx:for='{{pageData.act_image1}}' bindtap='previewImages' data-url='{{item.url}}' wx:key='{{item.id}}'><image src='{{item.url}}' mode='widthFix'></image></view>
+        <view class='activeInfoImagesText'><text>{{pageData.content1}}</text></view>
     </view>
     <view class='activeInfoImages' hidden='{{isTitleTwo}}'>
         <view class='activeInfoInfoTitle'>{{pageData.title2}}</view>
         <view class='emptyImage'></view>
-        <view class='activeInfoImage' wx:for='{{pageData.act_image2}}'><image src='{{item.url}}' mode='widthFix'></image></view>
-        <view class='activeInfoImagesText'>{{pageData.content2}}</view>
+        <view class='activeInfoImage' wx:for='{{pageData.act_image2}}' bindtap='previewImages' data-url='{{item.url}}' wx:key='{{item.id}}'><image src='{{item.url}}' mode='widthFix'></image></view>
+        <view class='activeInfoImagesText'><text>{{pageData.content2}}</text></view>
     </view>
     <view class='activeInfoImages' hidden='{{isTitleThree}}'>
-        <view class='activeInfoInfoTitle'>{{pageData.title2}}</view>
+        <view class='activeInfoInfoTitle'>{{pageData.title3}}</view>
         <view class='emptyImage'></view>
-        <view class='activeInfoImage' wx:for='{{pageData.act_image3}}'><image src='{{item.url}}' mode='widthFix'></image></view>
-        <view class='activeInfoImagesText'>{{pageData.content3}}</view>
+        <view class='activeInfoImage' wx:for='{{pageData.act_image3}}' bindtap='previewImages' data-url='{{item.url}}' wx:key='{{item.id}}'><image src='{{item.url}}' mode='widthFix'></image></view>
+        <view class='activeInfoImagesText'><text>{{pageData.content3}}</text></view>
     </view>
 </view>
